--- a/L06_SVM_LAB_ASSIGNMENT.ipynb
+++ b/L06_SVM_LAB_ASSIGNMENT.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lU8E8NArrWxS"
+        "id": "IdC0ii5h3M40"
       },
       "source": [
         "## Task 1 Decision Boundary from a Maximal Margin Classifier (4 points)\n",
@@ -51,8 +51,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "UeaOSmwqrWxT",
-        "outputId": "eb187a75-fa85-469f-e2f0-d66f80d56a5a"
+        "id": "7dGMZju33M41",
+        "outputId": "f2048e9a-3d5f-4e1d-b5f7-7478f1fa637f"
       },
       "outputs": [
         {
@@ -720,7 +720,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DRtR1T0jrWxU"
+        "id": "iJLrV9t-3M41"
       },
       "source": [
         "In this task we will use the `SVC` model of `sklearn.svm` with a `kernel=linear` and large parameter `C`. `sklearn`'s module `svm` has implementations of several Support Vector Machine algorithms. Some are meant to solve Regression, some - Classification problems. `LinearSVC` stands for Linear Support Vector Classification which is exactly what we need in order to solve the maximal margin classification problem. However, `svm.SVC` offers more flexibility in order to extract the learned parameters etc."
@@ -730,8 +730,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "NVMSrVshrWxU",
-        "outputId": "f37bc732-3601-4110-d29b-f13005102611"
+        "id": "iIB5RHpt3M41",
+        "outputId": "7c4d9501-68e5-437f-9bff-fbf4b3dc90df"
       },
       "outputs": [
         {
@@ -756,7 +756,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gfpYSXxkrWxU"
+        "id": "A2R4Bjw-3M41"
       },
       "source": [
         "When the optimisation has completed, you can access the parameters of the separating hyperplane. The vector $\\mathbf{w}$ and the bias/offset term $b$ are then as follows:"
@@ -766,8 +766,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "wnDBXvYSrWxU",
-        "outputId": "2abd40dd-f236-476e-90cc-e3d06c508643"
+        "id": "aqO05eO53M42",
+        "outputId": "46fbea0f-466c-466d-bf5c-467f314225f5"
       },
       "outputs": [
         {
@@ -788,7 +788,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MR6jembDrWxU"
+        "id": "BcmaTyc73M42"
       },
       "source": [
         "The indices of the support vectors are:"
@@ -798,8 +798,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "xRvTw_CwrWxU",
-        "outputId": "2faec767-59ca-4a81-8b3e-2093f52a9852"
+        "id": "amfT7umc3M42",
+        "outputId": "bb1847ba-80ce-4c6e-a09f-a05f1daa90c3"
       },
       "outputs": [
         {
@@ -817,7 +817,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0g4WWQy5rWxU"
+        "id": "MlTCyW0K3M42"
       },
       "source": [
         "So you can slice $\\mathbf{X}$ for the corresponding coordinates of the support vectors:"
@@ -827,8 +827,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1sKij68arWxU",
-        "outputId": "c2b65acb-6dcd-48cf-def0-9f0705a66e1c"
+        "id": "YkjEdSq93M42",
+        "outputId": "98e03b8c-9eaf-466f-dfdc-d626c23e7459"
       },
       "outputs": [
         {
@@ -851,7 +851,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UGHDFx4erWxU"
+        "id": "1FihgEzH3M42"
       },
       "source": [
         "Or get them directly:"
@@ -861,8 +861,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1mP-E-JOrWxU",
-        "outputId": "aea7e9d0-13de-463a-b172-a5bfc6e6a8e9"
+        "id": "t1hJEGtx3M42",
+        "outputId": "7cdd8ba3-78cf-45f0-dfb8-e5825cf8f465"
       },
       "outputs": [
         {
@@ -885,7 +885,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YMBYHaqIrWxU"
+        "id": "GrKNEMnm3M42"
       },
       "source": [
         "**Task 1A** Calculate $y^{(m)}\\left(b+w^Tx^{(m)}\\right)$ for every support vector.\n",
@@ -904,7 +904,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uF4VWcLSrWxV"
+        "id": "-JgYrQXi3M42"
       },
       "source": [
         "**Task 1B** Calculate the distance from the decision boundary to the support vectors, i.e. the width of the margin.\n",
@@ -916,7 +916,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "KaI2dbyPrWxV"
+        "id": "1ZVohqoz3M42"
       },
       "outputs": [],
       "source": []
@@ -924,7 +924,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fhA3KXy0rWxV"
+        "id": "22EbwByK3M42"
       },
       "source": [
         "\n",
@@ -939,8 +939,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "opOnDBxQrWxV",
-        "outputId": "adbaa52b-f4e2-4c3a-888a-971720da4fb6"
+        "id": "S292C-TV3M42",
+        "outputId": "b0c03f61-2e28-4068-8b09-8cea5c409095"
       },
       "outputs": [
         {
@@ -1054,7 +1054,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nRREFiJgrWxV"
+        "id": "8RTmG6_j3M42"
       },
       "source": []
     },
@@ -1062,7 +1062,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0klppG-SrWxV"
+        "id": "PhrwEUoG3M42"
       },
       "outputs": [],
       "source": [
@@ -1076,8 +1076,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6K9JVKelrWxV",
-        "outputId": "75f3c481-58b4-4537-e171-1aaebaf30f15"
+        "id": "I7kOscP23M42",
+        "outputId": "20a09a15-4232-4e9e-c391-ec9003d06bbc"
       },
       "outputs": [
         {
@@ -1237,8 +1237,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "BkTjwRfZrWxV",
-        "outputId": "a4f66f60-4126-46e8-92fa-1b66027315d6"
+        "id": "VueXV4Jl3M42",
+        "outputId": "ad702f21-8afb-482f-d2ac-b8fe6776306d"
       },
       "outputs": [
         {
@@ -1397,7 +1397,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6ORIlkCZrWxV"
+        "id": "FTwnqjOZ3M43"
       },
       "source": [
         "SVC will automatically use the One-vs-All strategy, so there's nothing special we need to do to handle multiple classes."
@@ -1407,7 +1407,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "bFuFd0snrWxV"
+        "id": "uwSy2Ice3M43"
       },
       "outputs": [],
       "source": [
@@ -1417,7 +1417,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xZBiiQJ7rWxV"
+        "id": "Tb9yDo0q3M43"
       },
       "source": [
         "Calulate the accuracy (cross validation score):"
@@ -1427,8 +1427,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "K1FkcSOarWxV",
-        "outputId": "28de62b2-9811-467f-de29-fe9f874db09c"
+        "id": "_aia24pd3M43",
+        "outputId": "ea295ce9-2973-4d71-d2fd-b3fec082f79f"
       },
       "outputs": [
         {
@@ -1454,7 +1454,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7ZgSG_warWxV"
+        "id": "n76q7GtD3M43"
       },
       "source": [
         "If you perform the cross-validation manually:"
@@ -1464,8 +1464,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mdAF2_G-rWxV",
-        "outputId": "37a9d05a-2ed2-4498-f7fb-755413453cd1"
+        "id": "cFYEooTG3M43",
+        "outputId": "7bcfe898-4938-4602-9986-cf514b261066"
       },
       "outputs": [
         {
@@ -1519,7 +1519,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GDZO_vCfrWxV"
+        "id": "E1J3dofn3M43"
       },
       "source": [
         "**Task 2A**: Which accuracy (cross validation score) can you reach when you standarize the features before training?  \n",
@@ -1530,8 +1530,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "4tfhVnOyrWxV",
-        "outputId": "d36a253f-f2d1-41fe-90b6-96c65c69dd22"
+        "id": "WxG9F8Xf3M43",
+        "outputId": "a66d830f-4de1-4ef6-85b2-cf671b3f9660"
       },
       "outputs": [
         {
@@ -1553,22 +1553,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vGp8Xf6frWxW"
+        "id": "wut76NfR3M43"
       },
       "source": [
         "## 📢 **HAND-IN** 📢:\n",
         "2A: Report the accuracy that you reached with feature standaridsation in Moodle"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "In order to plot the decision boundary and margins of SVM's, we will use the DecisionBoundaryDisplay.from_estimator from sklearn and wrap it into a function for reuse:"
-      ],
-      "metadata": {
-        "id": "_YkHcEzE4YRU"
-      }
     },
     {
       "cell_type": "code",
@@ -1626,7 +1616,7 @@
           "outputs_hidden": false
         },
         "tags": [],
-        "outputId": "cb730bb6-7ac2-4b78-9732-daa1909f9a6d"
+        "outputId": "8b58d881-2006-4205-cb7d-008870ce0cdb"
       },
       "outputs": [
         {
@@ -2297,7 +2287,7 @@
         },
         "scrolled": true,
         "tags": [],
-        "outputId": "c3cae972-3191-48d8-b5a4-21e5d7dc1376"
+        "outputId": "8604fa21-0325-43a7-d88d-275cfdb6e408"
       },
       "outputs": [
         {
@@ -2320,12 +2310,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "UnnLy31U3XmK"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "Z-ZXrmEi9UyO",
         "tags": [],
-        "outputId": "398d439b-a5ea-4e57-e4fa-d34b6c2ee3a2"
+        "outputId": "91ceb5ad-157d-40e4-f8a8-5dfc8b66f5c4"
       },
       "outputs": [
         {
@@ -3455,7 +3454,7 @@
       "execution_count": null,
       "metadata": {
         "id": "Sn2zmKrr1KsE",
-        "outputId": "a1a44795-6ac7-4111-85f8-9599c8a245fc"
+        "outputId": "01e3feb9-5af9-49f2-ed22-06c5fc0c36de"
       },
       "outputs": [
         {
@@ -11141,7 +11140,7 @@
       "metadata": {
         "id": "otatVaHS1KsF",
         "tags": [],
-        "outputId": "caeff23e-232e-4a22-d065-08c525e29e18"
+        "outputId": "045eb1d7-96b6-4018-b3fe-15db92415379"
       },
       "outputs": [
         {
@@ -11821,7 +11820,7 @@
       "execution_count": null,
       "metadata": {
         "id": "a9Nod5tv1KsF",
-        "outputId": "3a7cbf8b-a3f6-46d1-9127-09d3081e02aa"
+        "outputId": "e07023d9-74b1-46d4-8e84-631170e0324e"
       },
       "outputs": [
         {
@@ -12312,7 +12311,7 @@
       "metadata": {
         "id": "F1be1nzl1KsJ",
         "tags": [],
-        "outputId": "fed7eaa1-923e-4ef9-8bfd-85b56ddfe27b"
+        "outputId": "7edf9f16-c1d5-4705-868f-a9ee917f150f"
       },
       "outputs": [
         {
@@ -12980,7 +12979,7 @@
       "metadata": {
         "id": "XI_lTRAu1KsJ",
         "tags": [],
-        "outputId": "1d4d198a-7a20-47a5-a74e-583ebdbbec93"
+        "outputId": "9a1f46bb-a11b-4c5d-803d-e7b23c121f6b"
       },
       "outputs": [
         {
@@ -14265,7 +14264,7 @@
       "metadata": {
         "id": "AAYJ2Qxf8CFi",
         "tags": [],
-        "outputId": "ea19fcd6-b441-4cd3-d8bc-6e5f31e09e61"
+        "outputId": "7824380d-7a2f-4428-f34c-149460be5add"
       },
       "outputs": [
         {
@@ -14307,7 +14306,7 @@
       "metadata": {
         "id": "WJ_cZCwx1KsJ",
         "tags": [],
-        "outputId": "d20ab920-e66b-4c96-f660-a6c41860ba6a"
+        "outputId": "2f1384a4-04f0-48ab-e5b2-4f744a92c3e6"
       },
       "outputs": [
         {
@@ -15483,7 +15482,7 @@
       "execution_count": null,
       "metadata": {
         "id": "XK1zorHy9UyU",
-        "outputId": "0454a153-b68b-4174-ecd4-7f7b50b7c7bc"
+        "outputId": "e12549b6-cf4f-470b-bbc4-d37442b684a9"
       },
       "outputs": [
         {
@@ -15520,7 +15519,7 @@
       "metadata": {
         "id": "r-srCiuB9UyV",
         "tags": [],
-        "outputId": "a3aab6d3-1073-43f5-9ade-a6079078fb48"
+        "outputId": "949379a2-d613-4e82-b751-9374fa5b5fab"
       },
       "outputs": [
         {
@@ -15597,10 +15596,88 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-os8lrk4rWxY"
+        "id": "6KxH2QGQ3M45"
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### The Kernel Trick\n",
+        "**Note** that in this case it was relatively straight forward to find a suitable new dimension `r` which allows to separate the data linearly. However, this is not feasible for real world datasets. We will now use the RBF kernel on the unchanged data to let the SVM find a proper projection by itself.\n",
+        "To use the kernel trick, we need to set a non-linear `kernel`.\n",
+        "\n",
+        "Use `kernel='rbf'` and fit an `SVC` model on `X_non_linear` and `y_non_linear`.\n",
+        "**bold text**"
+      ],
+      "metadata": {
+        "id": "aATcgw9qWJLr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "juGapJI0WOaA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.svm import SVC\n",
+        "\n",
+        "# create an SVC an set its kernel parameter to 'rbf'\n",
+        "# train / fit it on X_non_linear and y_non_linear\n",
+        "clf = ...\n",
+        "\n",
+        "_, ax = plt.subplots(figsize=(5, 5))\n",
+        "plot_svc_decision_function(clf, X_non_linear, y_non_linear, ax)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "44u0fJ3wWO0h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classification_report(y_true=y_non_linear, y_pred=clf.predict(X_non_linear), digits=3))"
+      ],
+      "metadata": {
+        "id": "GtyQd4cFWSss"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf = svm.SVC(kernel='rbf', gamma=1, C=1.0)\n",
+        "clf.fit(X_non_linear, y_non_linear)\n",
+        "\n",
+        "_, ax = plt.subplots(figsize=(5, 5))\n",
+        "plot_svc_decision_function(clf, X_non_linear, y_non_linear, ax)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "2UBOTqnAWWRD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classification_report(y_true=y_non_linear, y_pred=clf.predict(X_non_linear), digits=3))"
+      ],
+      "metadata": {
+        "id": "MDcPFDI2WfLG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
